--- a/sass/style.css
+++ b/sass/style.css
@@ -9,17 +9,23 @@
 
 body {
   width: 100vw;
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
 body header {
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 1rem;
   border-bottom: 1px solid #b6bcc8;
+  background-color: #fff9;
 }
 
 body header .header-div-1 {
@@ -110,7 +116,173 @@ body header .header-div-2 #icon-avatar {
 }
 
 body main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+body main .main-section1 {
+  position: relative;
+}
+
+body main .main-section1 img {
+  width: 100%;
+}
+
+body main .main-section1 #icon-prev {
+  position: absolute;
+  top: 9rem;
+  left: .5rem;
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+
+body main .main-section1 #icon-next {
+  position: absolute;
+  top: 9rem;
+  right: .5rem;
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+
+body main .main-section1 .main-section1-div {
   display: none;
+}
+
+body main .main-section2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+body main .main-section2 h6 {
+  text-transform: uppercase;
+  color: #ff7d1a;
+  font-size: 1rem;
+}
+
+body main .main-section2 h1 {
+  font-size: 2rem;
+}
+
+body main .main-section2 p {
+  color: #68707d;
+  font-size: .95rem;
+}
+
+body main .main-section2 .main-section2-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body main .main-section2 .main-section2-div div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 1rem;
+}
+
+body main .main-section2 .main-section2-div div .descuento {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 .5rem;
+  background-color: #ffede0;
+  color: #ff7d1a;
+  font-weight: 700;
+  border-radius: 5px;
+}
+
+body main .main-section2 .main-section2-div .old-price {
+  color: #68707d;
+  text-decoration: line-through;
+}
+
+body main .main-section2 form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: .5rem;
+}
+
+body main .main-section2 form div {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body main .main-section2 form div input {
+  width: 100%;
+  height: 2rem;
+  border: 1px solid #ff7d1a;
+  border-radius: 5px;
+  background-color: #f7f8fd;
+  text-align: center;
+  font-size: 1.2rem;
+  -moz-appearance: textfield;
+}
+
+body main .main-section2 form div #icon-menos {
+  position: absolute;
+  font-size: 1.5rem;
+  font-weight: bold;
+  top: .1rem;
+  left: .5rem;
+  color: #ff7d1a;
+}
+
+body main .main-section2 form div #icon-mas {
+  position: absolute;
+  font-size: 1.5rem;
+  font-weight: bold;
+  top: .1rem;
+  right: .5rem;
+  color: #ff7d1a;
+}
+
+body main .main-section2 form #form-btn {
+  width: 100%;
+  height: 2.5rem;
+  border: 0;
+  border-radius: 5px;
+  color: #ffffff;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #fc8b35), color-stop(50%, #ff7d1a));
+  background: linear-gradient(to bottom, #fc8b35 50%, #ff7d1a 50%);
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 
 #modal-cart {
@@ -171,12 +343,12 @@ body main {
 }
 
 #modal-cart section div h4 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 #modal-cart section div h5 {
   color: #b6bcc8;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 #modal-cart section div h5 .precio-final {
@@ -199,6 +371,7 @@ body main {
   padding: .5rem 0;
 }
 
+/*-------------- MOBILE HORIZONTAL -----------------*/
 /*-------------- DESKTOP ----------------------*/
 @media (min-width: 1100px) {
   body header {
@@ -233,12 +406,19 @@ body main {
     margin: 0;
     font-weight: 400;
   }
+  body header nav ul li a:hover {
+    border-bottom: 1px solid #ff7d1a;
+    color: #ff7d1a;
+  }
+  body header .header-div-2 div:hover {
+    cursor: pointer;
+  }
   body header .header-div-2 #icon-avatar {
     width: 1.9rem;
     height: 1.9rem;
   }
-  body main {
-    display: none;
+  body header .header-div-2 #icon-avatar:hover {
+    cursor: pointer;
   }
   #modal-cart {
     position: absolute;
