--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,11 +20,16 @@ $Black: rgb(0, 0, 0);//75% opacity para el ligth bg
 
 body{
     width: 100vw;
+    font-family: 'Kumbh Sans', sans-serif;
     header{
+        z-index: 1;
         display: flex;
+        position: sticky;
+        top: 0;
         justify-content: space-between;
         padding: 1rem;
         border-bottom: 1px solid $Grayish-blue;
+        background-color: #fff9;
         .header-div-1{
             display: flex;
             gap: 1rem;
@@ -89,7 +94,119 @@ body{
         }
     }
     main{
-        display: none;
+        display: flex;
+        flex-direction: column;
+        .main-section1{
+            position: relative;
+            img{
+                width: 100%;
+            }
+            #icon-prev{
+                position: absolute;
+                top: 9rem;
+                left: .5rem;
+                font-size: 1.5rem;
+                color: $White;
+            }
+            #icon-next{
+                position: absolute;
+                top: 9rem;
+                right: .5rem;
+                font-size: 1.5rem;
+                color: $White;
+            }
+            .main-section1-div{
+                display: none;
+            }
+        }
+        .main-section2{
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            padding: 1rem;
+            h6{
+                text-transform: uppercase;
+                color: $Orange;
+                font-size: 1rem;
+            }
+            h1{
+                font-size: 2rem;
+            }
+            p{
+                color: $Dark-grayish-blue;
+                font-size: .95rem;
+            }
+            .main-section2-div{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                div{
+                    display: flex;
+                    align-content: center;
+                    gap: 1rem;
+                    .descuento{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 0 .5rem;
+                        background-color: $Pale;
+                        color: $Orange;
+                        font-weight: 700;
+                        border-radius: 5px;
+                    }
+                }
+                .old-price{
+                    color: $Dark-grayish-blue;
+                    text-decoration: line-through;
+                }
+            }
+            form{
+                display: flex;
+                flex-direction: column;
+                gap: .5rem;
+                div{
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    input{
+                        width: 100%;
+                        height: 2rem;
+                        border: 1px solid $Orange;
+                        border-radius: 5px;
+                        background-color: $Light-grayish-blue;
+                        text-align: center;
+                        font-size: 1.2rem;
+                        -moz-appearance: textfield;
+                    }
+                    #icon-menos{
+                        position: absolute;
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                        top: .1rem;
+                        left: .5rem;
+                        color: $Orange;
+                    }
+                    #icon-mas{
+                        position: absolute;
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                        top: .1rem;
+                        right: .5rem;
+                        color: $Orange;
+                    }
+                }
+                #form-btn{
+                    width: 100%;
+                    height: 2.5rem;
+                    border: 0;
+                    border-radius: 5px;
+                    color: $White;
+                    background: linear-gradient(to bottom, $Orange-light 50%, $Orange 50%);
+                    font-weight: 700;
+                    font-size: 1.2rem;
+                }
+            }
+        }
     }
 }
 
@@ -127,11 +244,11 @@ body{
             justify-content: center;
             gap: 0.4rem;
             h4{
-                font-size: 1.2rem;
+                font-size: 1.1rem;
             }
             h5{
                 color: $Grayish-blue;
-                font-size: 1.1rem;
+                font-size: 1rem;
                 .precio-final{
                     color: $Black;
                 }
@@ -152,6 +269,10 @@ body{
         padding: .5rem 0;
     }
 }
+
+/*-------------- MOBILE HORIZONTAL -----------------*/
+
+//@media (orientation:landscape){}
 
 /*-------------- DESKTOP ----------------------*/
 
@@ -179,19 +300,29 @@ body{
                     li a{
                         margin: 0;
                         font-weight: 400;
+                        &:hover{
+                            border-bottom: 1px solid $Orange;
+                            color: $Orange;
+                        }
                     }
                 }
             }
             .header-div-2{
+                div{
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
                 #icon-avatar{
                     width: 1.9rem;
                     height: 1.9rem;
+                    &:hover{
+                        cursor: pointer;
+                    }
                 }
             }
         }
-        main{
-            display: none;
-        }
+        //main{}
     }
     
     #modal-cart{
