--- a/sass/style.css
+++ b/sass/style.css
@@ -375,6 +375,7 @@ body main .main-section2 form #form-btn {
 /*-------------- DESKTOP ----------------------*/
 @media (min-width: 1100px) {
   body header {
+    background-color: #ffff;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -420,78 +421,55 @@ body main .main-section2 form #form-btn {
   body header .header-div-2 #icon-avatar:hover {
     cursor: pointer;
   }
-  #modal-cart {
-    position: absolute;
-    top: 3rem;
-    right: 1.5rem;
+  body main {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 3rem;
+    padding: 2rem;
+  }
+  body main .main-section1 img {
+    border-radius: 1rem;
+  }
+  body main .main-section1 #icon-prev {
+    top: 18rem;
     display: none;
-    -webkit-box-orient: vertical;
+  }
+  body main .main-section1 #icon-next {
+    top: 18rem;
+    display: none;
+  }
+  body main .main-section1 .main-section1-div {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    gap: 2rem;
+    margin-top: 1rem;
+  }
+  body main .main-section1 .main-section1-div img {
+    border-radius: .5rem;
+  }
+  body main .main-section2 {
+    margin-top: 3rem;
+  }
+  body main .main-section2 form {
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-color: #ffffff;
-    border: 1px solid #ff7d1a;
-    border-radius: 0.4rem;
-    padding: 1rem;
-    margin: 0.5rem;
-    gap: 1rem;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
-  #modal-cart h4 {
-    font-size: 1.2rem;
+  body main .main-section2 form div input {
+    height: 2.5rem;
   }
-  #modal-cart section {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: 1rem;
+  body main .main-section2 form div #icon-menos {
+    top: .4rem;
   }
-  #modal-cart section img {
-    width: 80px;
-    height: 80px;
-    border-radius: 0.4rem;
-  }
-  #modal-cart section div {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    gap: 0.4rem;
-  }
-  #modal-cart section div h4 {
-    font-size: 1.2rem;
-  }
-  #modal-cart section div h5 {
-    color: #b6bcc8;
-    font-size: 1.1rem;
-  }
-  #modal-cart section div h5 .precio-final {
-    color: black;
-  }
-  #modal-cart section #icon-trash {
-    font-size: 1.2rem;
-  }
-  #modal-cart #check-btn {
-    border: 0;
-    border-radius: .4rem;
-    width: 90%;
-    font-size: 1rem;
-    font-weight: 700;
-    color: #ffffff;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #fc8b35), color-stop(50%, #ff7d1a));
-    background: linear-gradient(to bottom, #fc8b35 50%, #ff7d1a 50%);
-    padding: .5rem 0;
+  body main .main-section2 form div #icon-mas {
+    top: .4rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
