--- a/sass/style.css
+++ b/sass/style.css
@@ -100,7 +100,12 @@ body header .header-div-2 div #indice-cart {
   bottom: 1rem;
   left: 1rem;
   font-weight: 700;
-  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 1.1rem;
   height: 1.1rem;
   border-radius: 50%;
@@ -131,6 +136,16 @@ body main .main-section1 {
 
 body main .main-section1 img {
   width: 100%;
+}
+
+body main .main-section1 #img-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body main .main-section1 #img-4, body main .main-section1 #img-2, body main .main-section1 #img-3 {
+  display: none;
 }
 
 body main .main-section1 #icon-prev {
@@ -255,6 +270,11 @@ body main .main-section2 form div input {
   -moz-appearance: textfield;
 }
 
+body main .main-section2 form div input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 body main .main-section2 form div #icon-menos {
   position: absolute;
   font-size: 1.5rem;
@@ -353,6 +373,8 @@ body main .main-section2 form #form-btn {
 
 #modal-cart section div h5 .precio-final {
   color: black;
+  margin-left: 1rem;
+  font-size: 1.1rem;
 }
 
 #modal-cart section #icon-trash {
@@ -360,6 +382,12 @@ body main .main-section2 form #form-btn {
 }
 
 #modal-cart #check-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border: 0;
   border-radius: .4rem;
   width: 90%;
@@ -369,6 +397,10 @@ body main .main-section2 form #form-btn {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #fc8b35), color-stop(50%, #ff7d1a));
   background: linear-gradient(to bottom, #fc8b35 50%, #ff7d1a 50%);
   padding: .5rem 0;
+}
+
+#modal-cart #cart-clean {
+  padding: 4rem;
 }
 
 /*-------------- MOBILE HORIZONTAL -----------------*/
